Add time measurements

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Database connection
 DB_HOST="localhost"
-DB_NAME="speedtest"
+DB_DATABASE="speedtest"
 DB_PASSWORD=""
 DB_PORT=5432
 DB_USERNAME=""
+
+# User records to create
+RECORDS=100000
